--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -15,7 +15,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
                   <MenuItem mnemonicParsing="false" text="Open" />
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem id="menuClose" mnemonicParsing="false" onAction="#onMenuClose" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
