ズームまわり処理を見直し

--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="pain" onDragDropped="#onDragDropped" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" onKeyTyped="#onKeyTyped" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+<BorderPane fx:id="pain" onDragDropped="#onDragDropped" onKeyPressed="#onKeyPressed" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -37,7 +37,7 @@
    <center>
       <ScrollPane fx:id="scroll" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <content>
-            <ImageView fx:id="imageView" onScroll="#onScroll" onScrollFinished="#onScrollFinished" onScrollStarted="#onScrollStarted" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imageView" onScroll="#onScroll" pickOnBounds="true" preserveRatio="true" />
          </content>
       </ScrollPane>
    </center>
