--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -20,7 +21,8 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+                  <CheckMenuItem fx:id="menuVerticalFit" mnemonicParsing="false" onAction="#onActionCheckMenuItem" text="縦フィット" />
+                  <CheckMenuItem fx:id="menuHorizontalFit" mnemonicParsing="false" onAction="#onActionCheckMenuItem" text="横フィット" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
